# options-pricing

./: .gitignore  Options_Analytics_Platform.py  Options_Pricer.py  README.md  option_chain_helpers.py  pnl_helpers.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
benchmarks/: benchmark_utils.py  make_plots.py  results.csv  test_performance.py  validate_data.py
models/: __init__.py  binomial_tree_utils.py  black_scholes.py  naive_binomial_tree.py  optimized_binomial_tree.py
pages/: 1_P&L.py  1_Performance_Benchmarks.py  3_Performance_Benchmarks.py
src/: binomial_tree_utils.py  black_scholes.py  naive_binomial_tree.py  optimized_binomial_tree.py  pyproject.toml
test_case_generation/: bsm_test_cases_generator.py  bsm_test_inputs.py  bt_amer_test_cases_generator.py  bt_amer_test_inputs.py  bt_euro_test_cases_generator.py  bt_euro_test_inputs.py  generate_test_cases.py
tests/: test_black_scholes.py  test_naive_binomial_tree.py  test_optimal_binomial_tree.py  test_optimized_binomial_tree.py
tests/data/: bs_cases.json  bt_american_test_cases.json  bt_european_test_cases.json
tests/tolerances/: __init__.py  bsm_tolerances.py  bt_tolerances.py
tools/: generate_test_cases.py
