[project]
name = "options-pricing"
version = "0.1.0"
description = "Options pricing models for quantitative finance and derivatives trading"
authors = [
    {name = "MouseTrap-codes",email = "mousetrapcodes@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.3.2,<3.0.0)",
    "scipy (>=1.16.1,<2.0.0)",
    "jax (>=0.7.0,<0.8.0)"
]

[tool.poetry]
name = "options-pricing"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "models" }
]

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.9"
mypy = "^1.17.1"
pytest = "^8.4.1"
pre-commit = "^4.3.0"
black = "^25.1.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
